# LLM_code

./: README.md  README_git.md  cuda_test.py  install_nvidia_container_tookit.sh
anthropic_client/: anthropic_cli.py
claude-code-2.1.88/claude-code-py-main/: .gitignore  Claude.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
claude-code-2.1.88/claude-code-py-main/claude_code_py/: config.py  main.py
claude-code-2.1.88/claude-code-py-main/claude_code_py/commands/: __init__.py  builtins.py  registry.py
claude-code-2.1.88/claude-code-py-main/claude_code_py/core/: __init__.py  compact.py  context.py  permissions.py  query_loop.py  state.py  tool.py
claude-code-2.1.88/claude-code-py-main/claude_code_py/llm/: __init__.py  client.py  messages.py
claude-code-2.1.88/claude-code-py-main/claude_code_py/tools/: __init__.py  agent_tool.py  ask_user.py  bash_tool.py  cron_tools.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  notebook_edit.py  plan_tools.py  task_tools.py  web_fetch.py  web_search.py
claude-code-2.1.88/claude-code-py-main/claude_code_py/ui/: __init__.py  input_handler.py  renderer.py  spinner.py
claude-code-2.1.88/claude-code-py-main/claude_code_py/utils/: git.py  paths.py  tokens.py
claude-code-2.1.88/claude-code-py-main/docs_repo_parser/: 00_start.md  01_architecture.md  02_tool_system.md  03_bash_tool.md  04_file_tools.md  05_permission_system.md  06_query_loop.md  07_slash_commands.md  08_system_prompt.md  INDEX.md
claude-code-2.1.88/claude-code-py-main/skills/repo_parser/: skill.md
(+99 files in other folders)
