[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-py"
version = "0.1.0"
description = "Python clone of Claude Code CLI, powered by DashScope (Qwen)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
full = [
    "markdownify>=0.11",
    "pypdf>=3.0",
]

[project.scripts]
claudepy = "claude_code_py.main:cli_entry"

[tool.setuptools.packages.find]
include = ["claude_code_py*"]
